# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py  even.py  even_game.py
brain_games/games/: calc.py  calculator.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calculator.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
vetalpaprotsky_brain_games.egg-info/: PKG-INFO  SOURCES.txt
