[tool.poetry]
name = "vetalpaprotsky_brain_games"
version = "0.6.0"
description = ""
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calculator:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

