[tool.poetry]
name = "vetalpaprotsky_brain_games"
version = "0.7.0"
description = "Brain Games is a set of math mini-games."
license = "MIT"
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
repository = "https://github.com/vetalpaprotsky/brain-games"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Environment :: Console",
  "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calculator:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

